Implement UUID and xuid (#34)
* Adds stop command and disconnection of players to the Server::shutdown()

* Remove VersionCommand argument

* Adding a page system and information on a command with/help [page|command name]

* Update readme for branch feature/command

* remake all system command

* feat: creation of the language system for Sculk

* fix: UTF-8 compilation

* feat: create a French language

* feat: add translation in eng

* feat: add translation in eng

* feat: add translation when server closes

* fix: if the file is not found, it will be in the basic English language

* fix: change system arguments

* delete: This server runs on version 1.0.0

* delete: This server runs on version 1.0.0

* change: protocol 766

* add: new information to connect

* implementation of uuid correct and xuid correct too

* fix: build

* remake all system language

* fix merge with features/language and add entityId and moving uuid in HumanEntity and delete ServerId

* Update log4j2.xml

* fix .run

---------

Co-authored-by: JblusItsMe <jeanbaptiste.fourgeux@gmail.com>
Co-authored-by: SenseiTarzan <gabrielcaptari0@gmail.com>